@startuml Gatochi

!theme blueprint

title Diagrama UML - Gatochi

class Juego {
    + Juego()
    + Iniciar() : void
    + MostrarSegundaVentanaRegistro() : void
}

class Personaje {
    - nombre : String

    + Personaje(nombre : String)
    + ObtenerNombre() : String
    + CambiarNombre(nuevoNombre : String) : void
}

class Dueno {
    - generoGato : String

    + Dueno(nombre : String)
    + RegistrarGato(nombre : String, edadTexto : String, genero : String, gatoRegistrado : Gato) : bool
}


class Gato {
    - edad : int
    - energia : int

    + Gato(nombre : String, edad : int)
    + Comer(comida : Comida) : void
    + IrAlBano(arenero : Arenero, comida : Comida, windowHandle : void*, catX : float) : bool
    + Dormir() : void
    + PerderEnergia() : void
    + ObtenerEnergia() : int
    + Mover(...) : void
}

class Comida {
    - tipo : String
    - cantidad : float

    + Comida(tipo : String, cantidad : float)
    + Servir() : void
    + Consumir() : bool
    + ObtenerCantidad() : int
    + CercaDeComida(catX : float) : bool
    + Dibujar(window : RenderWindow) : void
    + DibujarAviso(window : RenderWindow) : void
}

class Arenero {
    - limpio : bool
    - ubicacion : String

    + Arenero(limpio : bool, ubicacion : String)
    + Usar(comida : Comida, gato : Gato, windowHandle : void*) : bool
    + EstaCerca(catX : float) : bool
    + DibujarAviso(window : RenderWindow) : void
}

class Cama {
    + Cama()
    + EstaCerca(catX : float) : bool
    + DibujarAviso(window : RenderWindow) : void
}

class Veterinario {
    - nombre : String
    - especialidad : String

    + Veterinario(nombre : String, especialidad : String)
    + CurarGato(gato : Gato, windowHandle : void*) : void
    + RevivirGato(gato : Gato, comida : Comida, windowHandle : void*) : void
}

' ===== RELACIONES =====


Juego *-- Personaje : tiene personajes
Gato --|> Personaje
Dueno --|> Personaje
Dueno *-- Gato : tiene
Gato o-- Comida : usa / come
Gato o-- Arenero : usa
Gato o-- Cama : usa
Veterinario o-- Gato : cura / revive
Veterinario o-- Comida : repone

@enduml
